update: add intro section and styles

--- a/index.html
+++ b/index.html
@@ -7,25 +7,39 @@
     <title>ActiveBox</title>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header__inner">
-                <div class="header__logo">
-                    <img src="" alt="">
-                </div>
-                <!-- /.header__logo -->
-                <nav>
-                    <a href="">Features</a>
-                    <a href="">Works</a>
-                    <a href="">Our Team</a>
-                    <a href="">Testimonials</a>
-                    <a href="">Download</a>
-                </nav>
+<!--Header-->
+<header class="header">
+    <div class="container">
+        <div class="header__inner">
+            <div class="header__logo">
+                <img src="/img/activebox-logo.png" alt="">
             </div>
-            <!-- /.header__inner -->
+            <!-- /.header__logo -->
+            <nav class="nav">
+                <a class="nav__link" href="">Features</a>
+                <a class="nav__link" href="">Works</a>
+                <a class="nav__link" href="">Our Team</a>
+                <a class="nav__link" href="">Testimonials</a>
+                <a class="nav__link" href="">Download</a>
+            </nav>
         </div>
-        <!-- /.container -->
-    </header>
-    <!-- /.header -->
+        <!-- /.header__inner -->
+    </div>
+    <!-- /.container -->
+</header>
+<!-- /.header -->
+<!--Intro-->
+<div class="intro">
+    <div class="container">
+       <div class="intro__inner">
+           <h1 class="intro__title">Your Favorite One Page Multi Purpose Template</h1>
+           <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praese</h2>
+           <a href="" class="btn btn--red">Find out more</a>
+       </div>
+       <!-- /.intro__inner -->
+     </div>
+    <!-- /.container -->
+</div>
+<!-- /.intro -->
 </body>
 </html>
