update: add img files, html and css styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
-                <img src="/img/activebox-logo.png" alt="">
+                <img src="img/activebox-logo.png" alt="">
             </div>
             <!-- /.header__logo -->
             <nav class="nav">
@@ -28,7 +28,7 @@
     <!-- /.container -->
 </header>
 <!-- /.header -->
-<!--Intro-->
+<!-- Intro -->
 <div class="intro">
     <div class="container">
        <div class="intro__inner">
@@ -41,5 +41,128 @@
     <!-- /.container -->
 </div>
 <!-- /.intro -->
+
+<!-- Features -->
+<div class="container">
+    <div class="features">
+        <div class="features__item">
+            <img class="features__icon" src="img/features/features-1.png" alt="features">
+            <h4 class="features__title">Easily Customised</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla.</div>
+        </div>
+        <!-- /.features__item -->
+        <div class="features__item">
+            <img class="features__icon" src="img/features/features-2.png" alt="features">
+            <h4 class="features__title">Responsive REady</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla.</div>
+        </div>
+        <!-- /.features__item -->
+        <div class="features__item">
+            <img class="features__icon" src="img/features/features-3.png" alt="features">
+            <h4 class="features__title">Modern Design</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla.</div>
+        </div>
+        <!-- /.features__item -->
+        <div class="features__item">
+            <img class="features__icon" src="img/features/features-4.png" alt="features">
+            <h4 class="features__title">Clean Code</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla.</div>
+        </div>
+        <!-- /.features__item -->
+        <div class="features__item">
+            <img class="features__icon" src="img/features/features-5.png" alt="features">
+            <h4 class="features__title">Ready to Ship</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla.</div>
+        </div>
+        <!-- /.features__item -->
+        <div class="features__item">
+            <img class="features__icon" src="img/features/features-6.png" alt="features">
+            <h4 class="features__title">Download for Free</h4>
+            <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla.</div>
+        </div>
+        <!-- /.features__item -->
+    </div>
+    <!-- /.fearutes -->
+</div>
+<!-- /.container -->
+
+<!-- Works -->
+<div class="works">
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-1.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-2.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-3.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-4.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-5.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-6.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-7.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+    <div class="works__item">
+        <img class="works__photo" src="img/works/work-8.jpg" alt="works">
+        <div class="works__content">
+            <div class="works__title">Project Name</div>
+            <div class="works__text">User Interface Design</div>
+        </div>
+        <!-- /.works__content -->
+    </div>
+    <!-- /.works__item -->
+</div>
+<!-- /.works -->
+
+
+
 </body>
 </html>
