update: add styles for team block

--- a/index.html
+++ b/index.html
@@ -319,13 +319,14 @@
 
 <div class="reviews">
     <div class="container">
-        <div class="reviews__inner">
+        <div class="reviews__item">
             <div class="reviews__photo">
-
+                <img class="reviews__img" src="img/reviews/review-1.jpg" alt="review">
             </div>
             <!-- /.reviews__photo -->
             <div class="reviews__content">
-
+                <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit al</div>
+                <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
             </div>
             <!-- /.reviews__content -->
         </div>
@@ -335,6 +336,22 @@
 </div>
 <!-- /.reviews -->
 
+<!-- Download -->
+
+<div class="dowload">
+    <div class="container">
+        <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+        <div class="dowload__text">
+            <p>Fusce dapibus, tellus ac cursus commodo</p>
+        </div>
+        <a class="btn btn--red" href="">Download here</a>
+    </div>
+    <!-- /.container -->
+</div>
+<!-- /.dowload -->
+
 
 </body>
 </html>
+
+
