update: change index.html

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="dowload__text">
             <p>Fusce dapibus, tellus ac cursus commodo</p>
         </div>
-        <a class="btn btn--red" href="">Download here</a>
+        <a class="btn btn--red" href="#">Download here</a>
     </div>
     <!-- /.container -->
 </div>
