--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>ActiveBox</title>
 </head>
 <body>
@@ -200,8 +200,7 @@
                 <div class="team__name">Ruth Woods</div>
                 <div class="team__prof">Founder, CEO</div>
                 <div class="team__text">
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
                 </div>
                 <div class="social">
                     <a class="social__item" href="">
@@ -325,7 +324,7 @@
             </div>
             <!-- /.reviews__photo -->
             <div class="reviews__content">
-                <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit al</div>
+                <div class="reviews__text">Integer posuere erat a ante venenatis dapibus posuere velit al</div>
                 <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
             </div>
             <!-- /.reviews__content -->
@@ -344,12 +343,71 @@
         <div class="dowload__text">
             <p>Fusce dapibus, tellus ac cursus commodo</p>
         </div>
-        <a class="btn btn--red" href="#">Download here</a>
+        <a class="btn btn--red btn--long" href="#">Download here</a>
     </div>
     <!-- /.container -->
 </div>
 <!-- /.dowload -->
 
+<!-- Footer -->
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__block">
+                <h4 class="footer__title">Location</h4>
+                <address class="footer__address">
+                    <div>3481 Melrose Place</div>
+                    <div>Beverly Hills, CA 90210</div>
+                </address>
+            </div>
+            <!-- /.footer__block -->
+            <div class="footer__block">
+                <h4 class="footer__title">Share with love</h4>
+                <div class="social social--footer">
+                    <a class="social__item" href="#" target="_blank">
+                        <svg class="social__icon">
+                            <use xlink:href="#facebook"></use>
+                        </svg>
+                    </a>
+                    <a class="social__item" href="#" target="_blank">
+                        <svg class="social__icon">
+                            <use xlink:href="#twitter"></use>
+                        </svg>
+                    </a>
+                    <a class="social__item" href="#" target="_blank">
+                        <svg class="social__icon">
+                            <use xlink:href="#linkedin"></use>
+                        </svg>
+                    </a>
+                </div>
+                <!-- /.social -->
+            </div>
+            <!-- /.footer__block -->
+            <div class="footer__block">
+                <h4 class="footer__title">About activebox</h4>
+                <div class="footer__text">
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                </div>
+            </div>
+            <!-- /.footer__block -->
+        </div>
+        <!-- /.footer__inner -->
+    </div>
+    <!-- /.container -->
+    <div class="copyright">
+       <div class="container">
+            <div class="copyright__text">
+                <p>Copyright © 2015 ActiveBox. All Rights Reserved</p>
+                <p>Made <span>by Kamal Chaneman</span></p>
+            </div>
+       </div>
+       <!-- /.container -->
+
+    </div>
+    <!-- /.copyright -->
+</footer>
+<!-- /.footer -->
 
 </body>
 </html>
