update: add footer, copyright and burger and styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>ActiveBox</title>
@@ -44,6 +45,11 @@
                 <a class="nav__link" href="">Testimonials</a>
                 <a class="nav__link" href="">Download</a>
             </nav>
+            <!-- /.nav -->
+            <button class="burger" type="button">
+                <span class="burger__item">Menu</span>
+            </button>
+            <!-- /.burger -->
         </div>
         <!-- /.header__inner -->
     </div>
