--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>ActiveBox</title>
 </head>
 <body>
@@ -31,7 +32,7 @@
 
 <!--Header-->
 
-<header class="header">
+<header class="header" id="header">
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
@@ -59,7 +60,7 @@
 
 <!-- Intro -->
 
-<div class="intro">
+<div class="intro" id="intro">
     <div class="container">
        <div class="intro__inner">
            <h1 class="intro__title">Your Favorite One Page Multi Purpose Template</h1>
@@ -414,6 +415,10 @@
     <!-- /.copyright -->
 </footer>
 <!-- /.footer -->
+
+<!--JavaScript-->
+
+<script src="js/app.js"></script>
 
 </body>
 </html>
