--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>ActiveBox</title>
 </head>
 <body>
@@ -39,15 +40,15 @@
                 <img src="img/activebox-logo.png" alt="">
             </div>
             <!-- /.header__logo -->
-            <nav class="nav">
-                <a class="nav__link" href="">Features</a>
-                <a class="nav__link" href="">Works</a>
-                <a class="nav__link" href="">Our Team</a>
-                <a class="nav__link" href="">Testimonials</a>
-                <a class="nav__link" href="">Download</a>
+            <nav class="nav" id="nav">
+                <a class="nav__link" href="#" data-scroll="#features">Features</a>
+                <a class="nav__link" href="#" data-scroll="#works">Works</a>
+                <a class="nav__link" href="#" data-scroll="#team">Our Team</a>
+                <a class="nav__link" href="#" data-scroll="#reviews">Testimonials</a>
+                <a class="nav__link" href="#" data-scroll="#dowload">Download</a>
             </nav>
             <!-- /.nav -->
-            <button class="burger" type="button">
+            <button class="burger" type="button" id="navToggle">
                 <span class="burger__item">Menu</span>
             </button>
             <!-- /.burger -->
@@ -75,7 +76,7 @@
 
 <!-- Features -->
 
-<div class="container">
+<div class="container" id="features">
     <div class="features">
         <div class="features__item">
             <img class="features__icon" src="img/features/features-1.png" alt="features">
@@ -120,7 +121,7 @@
 
 <!-- Works -->
 
-<div class="works">
+<div class="works" id="works">
     <div class="works__item">
         <img class="works__photo" src="img/works/work-1.jpg" alt="works">
         <div class="works__content">
@@ -198,7 +199,7 @@
 
 <!-- Team -->
 
-<div class="team">
+<div class="team" id="team">
     <div class="container">
         <div class="team__inner">
 
@@ -323,20 +324,41 @@
 
 <!--Testimonials-->
 
-<div class="reviews">
+<div class="reviews" id="reviews">
     <div class="container">
-        <div class="reviews__item">
-            <div class="reviews__photo">
-                <img class="reviews__img" src="img/reviews/review-1.jpg" alt="review">
+        <div class="reviews__slider" id="reviewsSlider">
+          <div class="slick-item">
+              <div class="reviews__item">
+                <div class="reviews__photo">
+                    <img class="reviews__img" src="img/reviews/review-1.jpg" alt="review">
+                </div>
+                <!-- /.reviews__photo -->
+                <div class="reviews__content">
+                    <div class="reviews__text">"Integer posuere erat a ante venenatis dapibus posuere velit al"</div>
+                    <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+                </div>
+                <!-- /.reviews__content -->
             </div>
-            <!-- /.reviews__photo -->
-            <div class="reviews__content">
-                <div class="reviews__text">Integer posuere erat a ante venenatis dapibus posuere velit al</div>
-                <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+            <!-- /.reviews__item -->
+          </div>
+          <!-- /.slick-item -->
+          <div class="slick-item">
+              <div class="reviews__item">
+                <div class="reviews__photo">
+                    <img class="reviews__img" src="img/reviews/review-1.jpg" alt="review">
+                </div>
+                <!-- /.reviews__photo -->
+                <div class="reviews__content">
+                    <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ullam quo, doloribus velit rerum et nihil, modi aperiam placeat ea vero necessitatibus deserunt commodi atque alias, labore! Enim, esse, facilis!"</div>
+                    <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+                </div>
+                <!-- /.reviews__content -->
             </div>
-            <!-- /.reviews__content -->
+            <!-- /.reviews__item -->
+          </div>
+            <!-- /.slick-item -->
         </div>
-        <!-- /.reviews__inner -->
+        <!-- /.reviewsSlider -->
     </div>
     <!-- /.container -->
 </div>
@@ -344,7 +366,7 @@
 
 <!-- Download -->
 
-<div class="dowload">
+<div class="dowload" id="dowload">
     <div class="container">
         <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
         <div class="dowload__text">
@@ -417,7 +439,7 @@
 <!-- /.footer -->
 
 <!--JavaScript-->
-
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/app.js"></script>
 
 </body>
